# Actium

./: .env.example  .gitignore  README.md  provider.json.example  pyproject.toml
actium/: __init__.py  agent.py  config.py
actium/config/: __init__.py  types.py
actium/execution/: __init__.py  ipython_session.py  shell_session.py  types.py
actium/infrastructure/: __init__.py  history.py  sandbox.py  types.py
actium/runtime/: __init__.py  builtin_tools.py
actium/skills/: __init__.py  cli.py  decorator.py  generator.py  parser.py  prompt.py  templates.py  validator.py
actium/utils/: __init__.py  print.py
docs/: agent.md  config.md  execution.md  infrastructure.md  runtime.md  skills.md
examples/: README.md  data_analyst.py  trpg_game.py
examples/skills/better-pandas/: SKILL.md  pandas_operations.py
examples/skills/better-pandas/docs/: load_dataframe.md  merge_dataframes.md
examples/skills/better-plot/: SKILL.md  plotting.py
examples/skills/better-plot/docs/: create_line_plot.md
examples/skills/better_pandas/: SKILL.md  __init__.py  pandas_operations.py
examples/skills/better_pandas/references/: aggregate_by_group.md  clean_dataframe.md  explore_dataframe.md  filter_dataframe.md  normalize_columns.md  pivot_dataframe.md  (+1 more)
examples/skills/better_plot/: SKILL.md  __init__.py  plotting.py
examples/skills/trpg/: SKILL.md  __init__.py  agents.py  dice.py  game_state.py  rules.py
tests/: __init__.py  conftest.py  test_agent.py  test_config.py  test_filesystem.py  test_history.py  test_python_session.py  test_shell_session.py  test_skills_decorator.py
(+26 files in other folders)
